Optimize TMDB WebClient configuration and centralize TMDB request handling
- Tuned Reactor Netty connection pool to reduce stale connection reuse
- Added retry handling for TMDB 429 and transient network errors
- Improved WebClient observability logs with request duration and failure context
- Centralized TMDB GET request construction in TmdbClient
- Fixed search URI building to avoid double encoding
- Standardized HTTP failure logging across TMDB endpoints
- Updated code style for Spring Boot 4 and Java 25 compatibility